# ROS_Gazebo

./: README.md
human_description/: CMakeLists.txt  package.xml
human_description/config/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
human_description/launch/: human_amcl.launch  human_gazebo.launch  velocity_smoother.launch.xml  view_navigation.launch  view_robot.launch
human_description/launch/includes/: move_base.launch.xml
human_description/launch/includes/amcl/: asus_xtion_pro_amcl.launch.xml
human_description/param/: costmap_common_params.yaml
human_description/rviz/: navigation-1.rviz  navigation.rviz  view_robot.rviz  view_robot1.rviz
human_description/src/: state_publisher.cpp  teleop.py
human_description/urdf/: camera_gazebo.urdf.xacro  human.gazebo  human.xacro
human_description/urdf/sensors/: asus_xtion_pro.urdf.xacro
nodes/: CMakeLists.txt  my_initials_turtlebot.py  my_initials_turtlesim.py  package.xml  rostocv.py
pursuit_evasion/: CMakeLists.txt  README.md  maps.pgm  maps.yaml  package.xml  timer.py
pursuit_evasion/launch/: robot_amcl.launch  robot_mapping.launch  robots.launch  sim.launch  slam.launch  spawn_human.launch
pursuit_evasion/maps/: ...pgm  ...yaml  map.pgm  map.yaml
pursuit_evasion/rviz/: amcl.rviz  turtlebot3_gmapping.rviz
pursuit_evasion/scripts/: move_evader.py
pursuit_evasion/worlds/: enclosed_playground.world  new_home.world
turtle_gazebo/: CMakeLists.txt  package.xml
turtle_gazebo/worlds/: turtlebothouse.world
(+7 files in other folders)
